# longeval-code

./: .gitignore  README.md
clef25/: .gitignore  README.md
clef25/evaluation-in-progress/: .gitignore  README.md  analyse-ir-metadata.ipynb  analyse-ir-metadata.py  analyse-replication.ipynb  analyse_dataset.ipynb  boxplot.py  evaluate_rank.ipynb  evaluation-in-progress.py  evaluation-replicability.py  latex_table.py  make_table.py  scatterplot.py
clef25/evaluation-in-progress/evaluation-results-in-progress/: longeval-2025-sci-20250430-test-results-run-ids.csv  longeval-2025-sci-20250430-test-results.csv  longeval-2025-web-20250430-test-results-run-ids.csv  longeval-2025-web-20250430-test-results.csv
clef25/pyterrier-baseline/: README.md  baseline.py  ir-metadata.yml  requirements.txt
clef25/pyterrier-baseline-web/: README.md  baseline.py  requirements.txt
clef25/qrel-boost/: README.md  baseline.py  test.ipynb
clef25/qrel-boost-web/: README.md  baseline.py  requirements.txt
clef25/relevance-feedback/: baseline.py  ir-metadata.yml  requirements.txt
clef25/relevance-feedback-web/: baseline.py
clef25/relevance-feedback-web/.devcontainer/: devcontainer.json
clef26/rag/submission-skeleton/: README.md  generated-responses.jsonl  ir-metadata.yml
clef26/rag/task-a-concatenation-baseline/: Dockerfile  README.md  (+1 more)
clef26/scientific-retrieval/: README.md
clef26/scientific-retrieval/evaluation/: README.md  evaluate-effectiveness.py  evaluate-robustness.py  pyproject.toml
clef26/topic-extraction/: README.md
conf26/topic-simulation-baseline/: README.md
(+50 files in other folders)
