[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.0",
    "ir-datasets-longeval>=0.0.15",
    "ir-measures>=0.4.3",
    "isort>=8.0.1",
    "pandas>=3.0.3",
    "pyterrier>=1.0.1",
    "repro-eval>=0.5.0",
    "tira>=0.0.200",
]
